<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/WidthMatchHeightMatchVertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin"
    android:padding="@dimen/activity_margin">

    <RelativeLayout
        android:layout_width="140dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal">
        <ImageView
            android:id="@+id/bookImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">
        </ImageView>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
        </ProgressBar>

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium">

        </TextView>

    </RelativeLayout>


    <EditText
        android:id="@+id/bookTitleEditText"
        style="@style/WidthMatchHeightWrap"
        android:digits="@string/digits_only"
        android:hint="@string/enter_book_name"
        android:inputType="textMultiLine"
        android:focusableInTouchMode="true"
        android:nextFocusDown="@id/euroPriceEditText"
        android:layout_marginTop="@dimen/activity_margin"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/bookPublishedEditText"
        style="@style/WidthMatchHeightWrap"
        android:digits="@string/digits_only"
        android:hint="@string/enter_publisher_name"
        android:inputType="textMultiLine"
        android:focusableInTouchMode="true"
        android:nextFocusDown="@id/euroPriceEditText"
        android:layout_marginTop="@dimen/activity_margin"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/euroPriceEditText"
        style="@style/WidthMatchHeightWrap"
        android:digits="@string/digits_only"
        android:hint="@string/enter_price_euro"
        android:nextFocusDown="@id/aedPriceEditText"
        android:inputType="numberDecimal"
        android:maxLength="20"
        android:maxLines="1"
        android:layout_marginTop="@dimen/activity_margin"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/aedPriceEditText"
        style="@style/WidthMatchHeightWrap"
        android:digits="@string/digits_only"
        android:hint="@string/enter_price_aed"
        android:nextFocusDown="@id/sellingPriceEditText"
        android:inputType="numberDecimal"
        android:maxLength="20"
        android:maxLines="1"
        android:layout_marginTop="@dimen/activity_margin"
        android:textSize="16sp" />


    <EditText
        android:id="@+id/sellingPriceEditText"
        style="@style/WidthMatchHeightWrap"
        android:digits="@string/digits_only"
        android:hint="@string/enter_price_sell"
        android:inputType="numberDecimal"
        android:nextFocusDown="@id/receivedDateEditText"
        android:maxLength="20"
        android:maxLines="1"
        android:layout_marginTop="@dimen/activity_margin"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/receivedDateEditText"
        style="@style/WidthMatchHeightWrap"
        android:digits="@string/digits_only"
        android:hint="@string/enter_received_date"
        android:nextFocusDown="@id/saveButton"
        android:inputType="date"
        android:maxLength="20"
        android:maxLines="1"
        android:layout_marginTop="@dimen/activity_margin"
        android:textSize="16sp" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="@dimen/activity_margin"
    android:layout_gravity="bottom"
    android:weightSum="3">

    <Button
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/rounded_corner"
        android:text="@string/save"
        android:textColor="@color/white"
        android:layout_margin="4dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"

        android:textSize="14sp" />

    <Button
        android:id="@+id/rescanButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/rounded_corner"
        android:text="Rescan"
        android:layout_margin="4dp"

        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="4dp"
        android:background="@drawable/rounded_corner"
        android:text="Cancel"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
        android:textColor="@color/white"
        android:textSize="14sp" />

</LinearLayout>



</LinearLayout>